--- a/mcu_source/Project/Internal/lpc54018_uart_server/mdk/lpc54018_uart_server.uvprojx
+++ b/mcu_source/Project/Internal/lpc54018_uart_server/mdk/lpc54018_uart_server.uvprojx
@@ -184,6 +184,7 @@
             <hadXRAM>1</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>2</RvdsVP>
+            <RvdsMve>0</RvdsMve>
             <hadIRAM2>1</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -514,6 +515,11 @@
               <FileName>uart_bridge_support.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\src\uart_bridge_support.c</FilePath>
+            </File>
+            <File>
+              <FileName>led_thread.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\led_thread.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1066,13 +1072,13 @@
             <UseTargetDll>1</UseTargetDll>
             <UseExternalTool>0</UseExternalTool>
             <RunIndependent>0</RunIndependent>
-            <UpdateFlashBeforeDebugging>1</UpdateFlashBeforeDebugging>
+            <UpdateFlashBeforeDebugging>0</UpdateFlashBeforeDebugging>
             <Capability>1</Capability>
             <DriverSelection>4096</DriverSelection>
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3></Flash3>
+          <Flash3>"" ()</Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
@@ -1118,6 +1124,7 @@
             <hadXRAM>1</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>2</RvdsVP>
+            <RvdsMve>0</RvdsMve>
             <hadIRAM2>1</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -1448,6 +1455,11 @@
               <FileName>uart_bridge_support.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\src\uart_bridge_support.c</FilePath>
+            </File>
+            <File>
+              <FileName>led_thread.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\led_thread.c</FilePath>
             </File>
           </Files>
         </Group>
