--- a/mcu_source/Project/Internal/lpc54018_uart_server/mdk/lpc54018_uart_server.uvprojx
+++ b/mcu_source/Project/Internal/lpc54018_uart_server/mdk/lpc54018_uart_server.uvprojx
@@ -16,8 +16,8 @@
         <TargetCommonOption>
           <Device>LPC54608J512ET180</Device>
           <Vendor>NXP</Vendor>
-          <PackID>NXP.LPC54608_DFP.10.0.3</PackID>
-          <PackURL>http://mcuxpresso.nxp.com/cmsis_pack/repo/</PackURL>
+          <PackID>NXP.LPC54608_DFP.16.0.0</PackID>
+          <PackURL>https://mcuxpresso.nxp.com/cmsis_pack/repo/</PackURL>
           <Cpu>IRAM(0x04000000,0x8000) IRAM2(0x20000000,0x028000) IROM(0x00000000,0x080000) XRAM(0x40100000,0x2000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
@@ -185,6 +185,8 @@
             <uocXRam>0</uocXRam>
             <RvdsVP>2</RvdsVP>
             <RvdsMve>0</RvdsMve>
+            <RvdsCdeCp>0</RvdsCdeCp>
+            <nBranchProt>0</nBranchProt>
             <hadIRAM2>1</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -351,7 +353,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
-            <uClangAs>0</uClangAs>
+            <ClangAsOpt>4</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define>XIP_IMAGE,W25Q128JVFM</Define>
@@ -460,7 +462,7 @@
                 <NoWarn>2</NoWarn>
                 <uSurpInc>2</uSurpInc>
                 <useXO>2</useXO>
-                <uClangAs>2</uClangAs>
+                <ClangAsOpt>0</ClangAsOpt>
                 <VariousControls>
                   <MiscControls></MiscControls>
                   <Define></Define>
@@ -950,14 +952,14 @@
       <TargetName>lpc54018</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060750::V5.06 update 6 (build 750)::ARMCC</pCCUsed>
+      <pCCUsed>5060960::V5.06 update 7 (build 960)::.\ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>LPC54018JET180</Device>
           <Vendor>NXP</Vendor>
-          <PackID>NXP.LPC54018_DFP.10.0.4</PackID>
-          <PackURL>http://mcuxpresso.nxp.com/cmsis_pack/repo/</PackURL>
+          <PackID>NXP.LPC54018_DFP.14.0.0</PackID>
+          <PackURL>https://mcuxpresso.nxp.com/cmsis_pack/repo/</PackURL>
           <Cpu>IRAM(0x00000000,0x030000) IRAM2(0x20000000,0x028000) XRAM(0x40100000,0x2000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
@@ -1072,7 +1074,7 @@
             <UseTargetDll>1</UseTargetDll>
             <UseExternalTool>0</UseExternalTool>
             <RunIndependent>0</RunIndependent>
-            <UpdateFlashBeforeDebugging>0</UpdateFlashBeforeDebugging>
+            <UpdateFlashBeforeDebugging>1</UpdateFlashBeforeDebugging>
             <Capability>1</Capability>
             <DriverSelection>4096</DriverSelection>
           </Flash1>
@@ -1125,6 +1127,8 @@
             <uocXRam>0</uocXRam>
             <RvdsVP>2</RvdsVP>
             <RvdsMve>0</RvdsMve>
+            <RvdsCdeCp>0</RvdsCdeCp>
+            <nBranchProt>0</nBranchProt>
             <hadIRAM2>1</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -1276,7 +1280,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls>--c99</MiscControls>
-              <Define>LPC54608 RTT</Define>
+              <Define>LPC54608 RTT USING_UART0_AS_MSH</Define>
               <Undefine></Undefine>
               <IncludePath>..\..\..\..\Libraries\startup\inc;..\..\..\..\Libraries\startup\lib;..\..\..\..\Libraries\drivers_lpc\inc;..\..\..\..\Libraries\utilities\inc;..\..\..\..\Libraries\devices\inc;..\src;..\..\..\..\Libraries\utilities\structures;..\..\..\..\Libraries\utilities\chusb\inc;..\src\config;..\..\..\..\Libraries\utilities\rtthread\include;..\..\..\..\Libraries\utilities\rtthread\components\finsh;..\..\..\..\Libraries\utilities\rtthread\components\drivers\include;..\..\..\..\Libraries\utilities\rtthread\components\utilities\ulog;..\..\..\..\Libraries\utilities\rtthread\components\drivers\include</IncludePath>
             </VariousControls>
@@ -1291,7 +1295,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
-            <uClangAs>0</uClangAs>
+            <ClangAsOpt>4</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define>W25Q128JVFM</Define>
@@ -1380,7 +1384,7 @@
                 <NoWarn>2</NoWarn>
                 <uSurpInc>2</uSurpInc>
                 <useXO>2</useXO>
-                <uClangAs>2</uClangAs>
+                <ClangAsOpt>0</ClangAsOpt>
                 <VariousControls>
                   <MiscControls></MiscControls>
                   <Define></Define>
